unpackaged/main/default/objects/HealthCloudGA__EhrMedicationStatement__c/fields/Anticipated_Final_Dose_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Final_Dose_Date__c</fullName>
    <description>Calculated by Flow, based on start date and frequency fields.</description>
    <label>Anticipated Final Dose Date</label>
    <type>Date</type>
</CustomField>