unpackaged/main/default/objects/HealthCloudGA__EhrMedicationStatement__c/fields/Dosage_Unit__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Unit__c</fullName>
    <label>Dosage Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mg</fullName>
            </value>
            <value>
                <fullName>g</fullName>
            </value>
            <value>
                <fullName>mcg</fullName>
            </value>
            <value>
                <fullName>iu</fullName>
            </value>
            <value>
                <fullName>ml</fullName>
            </value>
            <value>
                <fullName>pill(s)</fullName>
            </value>
            <value>
                <fullName>tbsp</fullName>
            </value>
            <value>
                <fullName>Unit(s)</fullName>
            </value>
            <value>
                <fullName>cups</fullName>
            </value>
            <value>
                <fullName>tsp</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>patch(es)</fullName>
            </value>
            <value>
                <fullName>lozenge(s)</fullName>
            </value>
            <value>
                <fullName>syrup</fullName>
            </value>
            <value>
                <fullName>drop(s)</fullName>
            </value>
            <value>
                <fullName>spray(s)</fullName>
            </value>
            <value>
                <fullName>injection</fullName>
            </value>
            <value>
                <fullName>ointment</fullName>
            </value>
            <value>
                <fullName>inhalation</fullName>
            </value>
            <value>
                <fullName>packet</fullName>
                <isActive>false</isActive>
                <label>packet</label>
            </value>
            <value>
                <fullName>pill</fullName>
                <isActive>false</isActive>
                <label>pill</label>
            </value>
            <value>
                <fullName>µg</fullName>
                <isActive>false</isActive>
                <label>µg</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>