unpackaged/main/default/objects/HealthCloudGA__EhrMedicationStatement__c/fields/Dosage_Value__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Value__c</fullName>
    <label>Dosage Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>