unpackaged/main/default/objects/HealthCloudGA__EhrMedicationStatement__c/fields/Doses_in_Prescription__c.field-meta.xml
<CustomField>
    <fullName>Doses_in_Prescription__c</fullName>
    <label>Doses in Prescription</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>