unpackaged/main/default/objects/HealthCloudGA__EhrMedicationStatement__c/fields/First_Dose_Taken_When__c.field-meta.xml
<CustomField>
    <fullName>First_Dose_Taken_When__c</fullName>
    <description>Date and Time the first dose is taken</description>
    <label>First Dose Taken When?</label>
    <type>DateTime</type>
</CustomField>