unpackaged/main/default/objects/HealthCloudGA__EhrMedicationStatement__c/fields/Frequency_Unit__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Unit__c</fullName>
    <label>Frequency Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As Needed</fullName>
            </value>
            <value>
                <fullName>Every Day</fullName>
            </value>
            <value>
                <fullName>Specific Days</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
                <isActive>false</isActive>
                <label>Day</label>
            </value>
            <value>
                <fullName>Hour</fullName>
                <isActive>false</isActive>
                <label>Hour</label>
            </value>
            <value>
                <fullName>Week</fullName>
                <isActive>false</isActive>
                <label>Week</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>