unpackaged/main/default/objects/HealthCloudGA__EhrMedicationStatement__c/fields/Frequency_Value__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Value__c</fullName>
    <label>Frequency Value</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>