unpackaged/main/default/objects/HealthCloudGA__EhrMedicationStatement__c/fields/HealthCloudGA__MedicationCodeLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__MedicationCodeLabel__c</fullName>
    <description>Friendly name for medication code</description>
    <inlineHelpText>Friendly name for medication code</inlineHelpText>
    <label>Medication Code Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>