unpackaged/main/default/objects/HealthCloudGA__EhrMedicationStatement__c/fields/HealthCloudGA__MedicationLotNumber__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__MedicationLotNumber__c</fullName>
    <description>Lot number for medication batch</description>
    <inlineHelpText>Lot number for medication batch</inlineHelpText>
    <label>Medication Lot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>