unpackaged/main/default/objects/HealthCloudGA__EhrMedicationStatement__c/fields/HealthCloudGA__MedicationProductFormCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__MedicationProductFormCode__c</fullName>
    <description>powder | tablets | carton + code</description>
    <inlineHelpText>powder | tablets | carton + code</inlineHelpText>
    <label>Medication Product Form Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>