unpackaged/main/default/objects/HealthCloudGA__EhrMedicationStatement__c/fields/HealthCloudGA__MedicationProductFormLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__MedicationProductFormLabel__c</fullName>
    <description>powder | tablets | carton + friendly name</description>
    <inlineHelpText>powder | tablets | carton + friendly name</inlineHelpText>
    <label>Medication Product Form Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>