unpackaged/main/default/objects/HealthCloudGA__EhrMedicationStatement__c/fields/HealthCloudGA__StatusCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__StatusCode__c</fullName>
    <description>A code specifying the state of the statement. Generally, this will be in-progress or completed.</description>
    <inlineHelpText>A code specifying the state of the statement. Generally, this will be in-progress or completed.</inlineHelpText>
    <label>Status Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Started</fullName>
            </value>
            <value>
                <fullName>Currently Taking</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Stopped Before Completion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>