unpackaged/main/default/objects/HealthCloudGA__EhrMedicationStatement__c/fields/Medication__c.field-meta.xml
<CustomField>
    <fullName>Medication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medication</label>
    <referenceTo>Medication__c</referenceTo>
    <relationshipLabel>Medication Statements</relationshipLabel>
    <relationshipName>Medication_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>