unpackaged/main/default/objects/HealthCloudGA__EhrMedicationStatement__c/fields/Prescribing_Physician__c.field-meta.xml
<CustomField>
    <fullName>Prescribing_Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescribing Physician</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Prescribing Physician Medication Statements</relationshipLabel>
    <relationshipName>Medication_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>