unpackaged/main/default/objects/HealthCloudGA__EhrMedicationStatement__c/fields/Reason_For_Stopping__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Stopping__c</fullName>
    <description>If Stopped Before Completion is selected, captures why the Patient did not complete their medication.  Required by Validation Rule.</description>
    <label>Reason For Stopping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>