unpackaged/main/default/objects/HealthCloudGA__EhrMedicationStatement__c/fields/With_Food__c.field-meta.xml
<CustomField>
    <fullName>With_Food__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates the medication should be taken with food</description>
    <label>With Food?</label>
    <type>Checkbox</type>
</CustomField>