unpackaged/main/default/objects/HealthCloudGA__EhrMedicationStatement__c/validationRules/Cannot_Save_without_a_Medication_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Save_without_a_Medication_Name</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( HealthCloudGA__MedicationName__c )&amp;&amp; (!$Setup.Bypass__c.Validation__c ||(LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;all&quot; &amp;&amp; LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;healthcloudga_ehrmedicationstatement__c&quot;))</errorConditionFormula>
    <errorDisplayField>HealthCloudGA__MedicationName__c</errorDisplayField>
    <errorMessage>Must have a medication</errorMessage>
</ValidationRule>