unpackaged/main/default/objects/HealthCloudGA__EhrMedicationStatement__c/validationRules/Need_Reason_To_Stop.validationRule-meta.xml
<ValidationRule>
    <fullName>Need_Reason_To_Stop</fullName>
    <active>true</active>
    <description>Captures if the Status of the Medication Statement is set to Stopped Before Completion without entering a reason.</description>
    <errorConditionFormula>and( ispickval(HealthCloudGA__StatusCode__c,&quot;Stopped Before Completion&quot;),
( LEN( Reason_For_Stopping__c )=0 )

)&amp;&amp; (!$Setup.Bypass__c.Validation__c ||(LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;all&quot; &amp;&amp; LOWER($Setup.Bypass__c.SObject__c) &lt;&gt; &quot;healthcloudga_ehrmedicationstatement__c&quot;))</errorConditionFormula>
    <errorMessage>Please enter a reason for stopping the medication before the prescription is completed.</errorMessage>
</ValidationRule>